Fix Overflow-X

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -726,4 +726,6 @@ body {
 .overflow-fix {
 	display: flex;
 	flex-wrap: wrap;
+	max-width: 95%;
 }
+
